# generative_rectangle_nannou

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  rectangle_packer.rs
