[package]
name = "generative_rectangle_nannou"
authors = ["Brian Gershon <briangershon@users.noreply.github.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19"
imageproc = "0.24"
ab_glyph = "0.2.24"